Adding a background and delimitade ball border, switch player color, put placar in the correct location .next step is delimitade player border.

--- a/Uc6Fabio/Uc6Fabio/Uc6Fabio.csproj
+++ b/Uc6Fabio/Uc6Fabio/Uc6Fabio.csproj
@@ -103,6 +103,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Components\Background.cs" />
     <Compile Include="Components\Ball.cs" />
     <Compile Include="Components\BaseObjects.cs" />
     <Compile Include="Components\Enemy.cs" />
@@ -145,6 +146,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.7</Version>
+    </PackageReference>
+    <PackageReference Include="System.Runtime">
+      <Version>4.3.1</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
